--- a/_output/_tex/index.tex
+++ b/_output/_tex/index.tex
@@ -93,39 +93,6 @@
 % Set default figure placement to htbp
 \def\fps@figure{htbp}
 \makeatother
-% definitions for citeproc citations
-\NewDocumentCommand\citeproctext{}{}
-\NewDocumentCommand\citeproc{mm}{%
-  \begingroup\def\citeproctext{#2}\cite{#1}\endgroup}
-\makeatletter
- % allow citations to break across lines
- \let\@cite@ofmt\@firstofone
- % avoid brackets around text for \cite:
- \def\@biblabel#1{}
- \def\@cite#1#2{{#1\if@tempswa , #2\fi}}
-\makeatother
-\newlength{\cslhangindent}
-\setlength{\cslhangindent}{1.5em}
-\newlength{\csllabelwidth}
-\setlength{\csllabelwidth}{3em}
-\newenvironment{CSLReferences}[2] % #1 hanging-indent, #2 entry-spacing
- {\begin{list}{}{%
-  \setlength{\itemindent}{0pt}
-  \setlength{\leftmargin}{0pt}
-  \setlength{\parsep}{0pt}
-  % turn on hanging indent if param 1 is 1
-  \ifodd #1
-   \setlength{\leftmargin}{\cslhangindent}
-   \setlength{\itemindent}{-1\cslhangindent}
-  \fi
-  % set entry spacing
-  \setlength{\itemsep}{#2\baselineskip}}}
- {\end{list}}
-\usepackage{calc}
-\newcommand{\CSLBlock}[1]{\hfill\break\parbox[t]{\linewidth}{\strut\ignorespaces#1\strut}}
-\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{\strut#1\strut}}
-\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
-\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 \KOMAoption{captions}{tableheading}
 \makeatletter
@@ -199,42 +166,58 @@ continually collected and published by the Instituto Geográphico
 Nacional (IGN). \ldots{}
 \end{abstract}
 
+\renewcommand*\contentsname{Table of contents}
+{
+\hypersetup{linkcolor=}
+\setcounter{tocdepth}{3}
+\tableofcontents
+}
 
-\subsection{Section}\label{section}
+\subsection{Introduction}\label{introduction}
 
-This is a simple placeholder for the manuscript's main document (Knuth
-1984).
+\section{}\label{section}
 
-\begin{verbatim}
-  [1]  0.551978209  0.690537490  0.187959799 -0.780584526 -1.093574140
-  [6] -1.312995138  0.674477629  0.088075641 -0.311121958  0.092068371
- [11]  0.144703164  0.103378312 -1.149013953 -0.745284677 -1.727033352
- [16] -0.282587892  0.663198309 -1.651148862  0.128939613  0.306214277
- [21] -0.792107388  0.906088210  2.047332420  0.447146919 -0.326382490
- [26]  0.241670466 -0.467509623  1.869768911  0.172379482 -0.661496839
- [31] -0.256172816 -0.531289390  0.522255124  1.128651292 -0.222218496
- [36]  0.972127004  0.666655911 -0.968198272  1.412247175 -0.462483027
- [41]  0.419014231  0.139607047 -0.095912309 -1.169956209 -1.064590468
- [46]  0.155693522  1.040268910 -0.113329618  1.461173044 -0.384831442
- [51] -0.329491055  0.951732104 -0.005167339  0.874536763  0.335928633
- [56]  0.598316012  1.269859529 -0.727573537  0.688837560 -0.465181106
- [61] -0.390420593 -0.291332283  0.664617550 -2.697304918 -0.083679582
- [66]  1.960691754 -0.195200715  1.827773135 -0.125640373 -1.674025346
- [71] -1.241666706 -0.996374661  0.454418463 -0.032320300 -0.307895825
- [76]  1.061223391 -0.805670711  0.401352100  0.187880685 -0.431669114
- [81]  1.410696210  0.555833599 -1.098194838  1.703648368  0.399915238
- [86] -1.381332077  1.364623189  0.347258485  1.461568712 -0.986598890
- [91] -1.366745771 -0.568881173 -1.025799138  1.115679936 -1.570484246
- [96]  0.798040114 -0.241265167  1.157794181 -0.460576682  0.772686053
-\end{verbatim}
+That's a nice intro.
 
-\phantomsection\label{refs}
-\begin{CSLReferences}{1}{0}
-\bibitem[\citeproctext]{ref-knuth84}
-Knuth, Donald E. 1984. {``Literate Programming.''} \emph{Comput. J.} 27
-(2): 97--111. \url{https://doi.org/10.1093/comjnl/27.2.97}.
+\pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-latex/notebooks-intro-cell-2-output-1.png}}
 
-\end{CSLReferences}
+\subsection{Sector Analysis}\label{sector-analysis}
+
+\section{}\label{section-1}
+
+\subsection{Personality of the
+Company}\label{personality-of-the-company}
+
+\section{}\label{section-2}
+
+\subsection{Fundamental Analysis}\label{fundamental-analysis}
+
+\section{}\label{section-3}
+
+\subsection{Technical Analysis}\label{technical-analysis}
+
+\section{}\label{section-4}
+
+\subsection{Company Performance
+2019-2024}\label{company-performance-2019-2024}
+
+\section{}\label{section-5}
+
+\subsection{Forecasting}\label{forecasting}
+
+\section{}\label{section-6}
+
+\begin{itemize}
+\tightlist
+\item
+  What risks does it list on 10-k? Summarize.
+\end{itemize}
+
+\pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-latex/notebooks-forecasting-cell-2-output-2.png}}
+
+\subsection{Summary}\label{summary}
+
+\section{}\label{section-7}
 
 
 
