Finish forecasting section

--- a/_output/notebooks/forecasting.embed.ipynb
+++ b/_output/notebooks/forecasting.embed.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "We’ve already done some simple short-term forecasting in our “Technical Analysis” section using **SMA** and **Bollinger Bands**. We’ve also accessed volatility by calculating **Beta** value and estimated risk/return using **Annualized Sharpe Ratio**, which might help us in medium-term forecasting. Now we will try using advanced **ARIMA** (Auto-Regressive Integrated Moving Averages) to predict stock prices for the next 6 months and for the next year."
    ],
-   "id": "c0abdc14-7482-4fd1-af6a-a353a189cdd0"
+   "id": "3c29ea30-9ead-4ef7-9e40-785f7efa09f7"
   },
   {
    "cell_type": "code",
@@ -1411,9 +1411,9 @@
    ],
    "source": [
     "# Load libraries\n",
-    "library(tidyquant)\n"
+    "library(tidyquant)"
    ],
-   "id": "55de29f5-66f6-41c2-826c-737c544f4159"
+   "id": "7f6b30a6-1165-4955-9ae0-92b5618ff854"
   }
  ],
  "nbformat": 4,
