--- a/_output/notebooks/intro.qmd
+++ b/_output/notebooks/intro.qmd
@@ -3,7 +3,7 @@
 
 Subject of financial analysis is very information-dense and to perform such an analysis (be it an analysis of industrial sectors, fundamental, technical, etc.) in earnest is a non-trivial job that we don't see ourselves capable of performing.
 
-Therefore, this document aims to provide a simplified, non-rigorous analysis aiming to showcase our understanding of course material and minimal proficiency in scientific communication using tools such as R language @ProjectStatisticalComputing, its "tidyquant" package @danchoTidyquantTidyQuantitative2025 and Quarto scientific publishing system @Quarto.
+Therefore, this document aims to provide a simplified, non-rigorous analysis aiming to showcase our understanding of course material and minimal proficiency in scientific communication using tools such as DeepSeek LLM with Web Search functionality, R language [@ProjectStatisticalComputing], its "tidyquant" package [@danchoTidyquantTidyQuantitative2025] and Quarto scientific publishing system [@Quarto].
 :::
 
 ```{r} 
