--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,14 @@
   file = {/home/vasily/Zotero/storage/M6KK8NGM/0000021076-25-000013.html}
 }
 
+@book{87ARIMAModelling,
+  title = {8.7 {{ARIMA}} Modelling in {{R}} {\textbar} {{Forecasting}}: {{Principles}} and {{Practice}} (2nd Ed)},
+  shorttitle = {8.7 {{ARIMA}} Modelling in {{R}} {\textbar} {{Forecasting}}},
+  urldate = {2025-02-15},
+  abstract = {2nd edition},
+  file = {/home/vasily/Zotero/storage/WA2CXBH9/arima-r.html}
+}
+
 @misc{ApplesSWOTAnalysis,
   title = {Apple's {{SWOT}} Analysis: Stock Faces {{AI}} Challenges amid Strong Ecosystem {{By Investing}}.Com},
   shorttitle = {Apple's {{SWOT}} Analysis},
@@ -40,6 +48,19 @@
   howpublished = {https://thefinancialanalyst.net/2024/09/22/clorox-faces-mixed-analyst-outlook-amid-cyberattack-and-market-challenges/},
   langid = {british},
   file = {/home/vasily/Zotero/storage/KZ4V25SY/clorox-faces-mixed-analyst-outlook-amid-cyberattack-and-market-challenges.html}
+}
+
+@misc{cerqueira8ReasonsWhy2022,
+  title = {8 {{Reasons Why Forecasting Is Hard}}},
+  author = {Cerqueira, Vitor},
+  year = {2022},
+  month = nov,
+  journal = {Towards Data Science},
+  urldate = {2025-02-15},
+  abstract = {Forecasting is a popular but difficult problem in data science. Challenges arise for several reasons, from non-stationarity to noise and missing values. Tackling these issues may be pivotal for improving forecasting performance. Introduction Atime series is a sequence of values ordered by time. The key aspect about these data sets is the temporal dependency among [{\dots}]},
+  howpublished = {https://towardsdatascience.com/8-reasons-why-forecasting-is-hard-481755a05325/},
+  langid = {american},
+  file = {/home/vasily/Zotero/storage/WCK25ZHK/8-reasons-why-forecasting-is-hard-481755a05325.html}
 }
 
 @misc{ChartingTidyquant,
@@ -154,6 +175,16 @@
   urldate = {2025-02-14},
   howpublished = {https://mlozanoqf.github.io/tutorial\_pmf/},
   file = {/home/vasily/Zotero/storage/3LFNCVH8/tutorial_pmf.html}
+}
+
+@misc{ForecastingPredictiveAnalytics,
+  title = {Forecasting and Predictive Analytics: {{A}} Critical Look at the Basic Building Blocks of a Predictive Model},
+  shorttitle = {Forecasting and Predictive Analytics},
+  journal = {Brookings},
+  urldate = {2025-02-15},
+  howpublished = {https://www.brookings.edu/articles/forecasting-and-predictive-analytics-a-critical-look-at-the-basic-building-blocks-of-a-predictive-model/},
+  langid = {american},
+  file = {/home/vasily/Zotero/storage/6UEFZRL6/forecasting-and-predictive-analytics-a-critical-look-at-the-basic-building-blocks-of-a-predicti.html}
 }
 
 @misc{HowDownloadStock0000,
