--- a/_output/notebooks/fundamentals.embed.ipynb
+++ b/_output/notebooks/fundamentals.embed.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#"
    ],
-   "id": "56e81042-3960-4869-b6ca-89862f13f8f2"
+   "id": "be55dea0-401c-4995-93ef-95704e92ca77"
   },
   {
    "cell_type": "raw",
@@ -25,18 +25,181 @@
     "EV = Mcap + Debt\n",
     "-->"
    ],
-   "id": "1ae8163e-3b20-46b0-870a-8f854759df03"
+   "id": "4de79788-c102-4001-bed6-b9042a33cf38"
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fundamental Analysis of The Clorox Company (CLX)\n",
-    "\n",
-    "Incorporating **Graham Number** and key financial ratios derived from the latest available data (as of February 2025):\n",
-    "\n",
     "------------------------------------------------------------------------\n",
     "\n",
+    "> **Important**\n",
+    ">\n",
+    "> In this section we will take a look at quantitative fundamental analysis tools provided by the “tidyquant” R language package \\[@danchoTidyquantTidyQuantitative2025\\] and use them to get key financial ratios of fundamental analysis for the Clorox company. This section is based on the following wonderful tutorial: @PerformanceAnalysisTidyquant\n",
+    "\n",
+    "First let’s retrieve 5-year period returns from the prices adjusted for stock splits, both for Clorox and S&P500 as the baseline. Next, we combine both datasets (Clorox and S&P500 returns) using “left-join” on the “date” field. Using this dataset, we can retrieve all kind of fundamental metrics, such as **Alpha** (0.0008), **Beta** (0.414).\n",
+    "\n",
+    "``` r\n",
+    "#| label: tbl-planet-measures\n",
+    "#| tbl-cap: Astronomical object\n",
+    "\n",
+    "library(tidyverse)\n",
+    "```\n",
+    "\n",
+    "    ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──\n",
+    "    ✔ dplyr     1.1.4     ✔ readr     2.1.5\n",
+    "    ✔ forcats   1.0.0     ✔ stringr   1.5.1\n",
+    "    ✔ ggplot2   3.5.1     ✔ tibble    3.2.1\n",
+    "    ✔ lubridate 1.9.4     ✔ tidyr     1.3.1\n",
+    "    ✔ purrr     1.0.4     \n",
+    "    ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+    "    ✖ purrr::%||%()   masks base::%||%()\n",
+    "    ✖ dplyr::filter() masks stats::filter()\n",
+    "    ✖ dplyr::lag()    masks stats::lag()\n",
+    "    ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors\n",
+    "\n",
+    "``` r\n",
+    "#| label: tbl-planet-measures\n",
+    "#| tbl-cap: Astronomical object\n",
+    "\n",
+    "library(tidyquant)\n",
+    "```\n",
+    "\n",
+    "    Registered S3 method overwritten by 'quantmod':\n",
+    "      method            from\n",
+    "      as.zoo.data.frame zoo \n",
+    "    ── Attaching core tidyquant packages ─────────────────────── tidyquant 1.0.10 ──\n",
+    "    ✔ PerformanceAnalytics 2.0.8      ✔ TTR                  0.24.4\n",
+    "    ✔ quantmod             0.4.26     ✔ xts                  0.14.1── Conflicts ────────────────────────────────────────── tidyquant_conflicts() ──\n",
+    "    ✖ purrr::%||%()                  masks base::%||%()\n",
+    "    ✖ zoo::as.Date()                 masks base::as.Date()\n",
+    "    ✖ zoo::as.Date.numeric()         masks base::as.Date.numeric()\n",
+    "    ✖ dplyr::filter()                masks stats::filter()\n",
+    "    ✖ xts::first()                   masks dplyr::first()\n",
+    "    ✖ dplyr::lag()                   masks stats::lag()\n",
+    "    ✖ xts::last()                    masks dplyr::last()\n",
+    "    ✖ PerformanceAnalytics::legend() masks graphics::legend()\n",
+    "    ✖ quantmod::summary()            masks base::summary()\n",
+    "    ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors\n",
+    "\n",
+    "``` r\n",
+    "#| label: tbl-planet-measures\n",
+    "#| tbl-cap: Astronomical object\n",
+    "\n",
+    "Ra <- \"CLX\" |>\n",
+    "    tq_get(get  = \"stock.prices\",\n",
+    "           from = \"2020-01-01\",\n",
+    "           to   = \"2025-02-01\") |>\n",
+    "    group_by(symbol) |>\n",
+    "    tq_transmute(select     = adjusted, \n",
+    "                 mutate_fun = periodReturn, \n",
+    "                 period     = \"monthly\", \n",
+    "                 col_rename = \"Ra\")\n",
+    "\n",
+    "\n",
+    "Rb <- \"^GSPC\" |>\n",
+    "    tq_get(get  = \"stock.prices\",\n",
+    "           from = \"2020-01-01\",\n",
+    "           to   = \"2025-02-01\") |>\n",
+    "    tq_transmute(select     = adjusted, \n",
+    "                 mutate_fun = periodReturn, \n",
+    "                 period     = \"monthly\", \n",
+    "                 col_rename = \"Rb\")\n",
+    "\n",
+    "RaRb <- left_join(Ra, Rb, by = c(\"date\" = \"date\"))\n",
+    "\n",
+    "\n",
+    "RaRb_capm <- RaRb %>%\n",
+    "    tq_performance(Ra = Ra, \n",
+    "                   Rb = Rb, \n",
+    "                   performance_fun = table.CAPM)\n",
+    "```\n",
+    "\n",
+    "    Registered S3 method overwritten by 'robustbase':\n",
+    "      method          from     \n",
+    "      hatvalues.lmrob RobStatTM\n",
+    "\n",
+    "``` r\n",
+    "#| label: tbl-planet-measures\n",
+    "#| tbl-cap: Astronomical object\n",
+    "\n",
+    "RaRb_capm %>% select(symbol, Alpha, Beta)\n",
+    "```\n",
+    "\n",
+    "    # A tibble: 1 × 3\n",
+    "    # Groups:   symbol [1]\n",
+    "      symbol  Alpha  Beta\n",
+    "      <chr>   <dbl> <dbl>\n",
+    "    1 CLX    0.0008 0.414\n",
+    "\n",
+    "We can also get the **Annualized Sharpe Ratio and Returns**, **Types of Mean Return (Geometric, Arithmetic, etc.)**, **Kurtosis**, as well as **Maximum and Median Return** by following the similar steps (no need for the baseline this time)."
+   ],
+   "id": "1b30a6af-3a37-4a77-ae3c-5accc66c1e0a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "# A tibble: 1 × 4\n",
+      "# Groups:   symbol [1]\n",
+      "  symbol AnnualizedReturn `AnnualizedSharpe(Rf=0%)` AnnualizedStdDev\n",
+      "  <chr>             <dbl>                     <dbl>            <dbl>\n",
+      "1 CLX              0.0381                     0.153            0.249"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "# A tibble: 1 × 17\n",
+      "# Groups:   symbol [1]\n",
+      "  symbol ArithmeticMean GeometricMean Kurtosis `LCLMean(0.95)` Maximum Median\n",
+      "  <chr>           <dbl>         <dbl>    <dbl>           <dbl>   <dbl>  <dbl>\n",
+      "1 CLX            0.0056        0.0031     1.20         -0.0128   0.218 0.0054\n",
+      "# ℹ 10 more variables: Minimum <dbl>, NAs <dbl>, Observations <dbl>,\n",
+      "#   Quartile1 <dbl>, Quartile3 <dbl>, SEMean <dbl>, Skewness <dbl>,\n",
+      "#   Stdev <dbl>, `UCLMean(0.95)` <dbl>, Variance <dbl>"
+     ]
+    }
+   ],
+   "source": [
+    "library(tidyverse)\n",
+    "library(tidyquant)\n",
+    "\n",
+    "Ra <- \"CLX\" |>\n",
+    "    tq_get(get  = \"stock.prices\",\n",
+    "           from = \"2020-01-01\",\n",
+    "           to   = \"2025-02-01\") |>\n",
+    "    group_by(symbol) |>\n",
+    "    tq_transmute(select     = adjusted, \n",
+    "                 mutate_fun = periodReturn, \n",
+    "                 period     = \"monthly\", \n",
+    "                 col_rename = \"Ra\")\n",
+    "\n",
+    "Ra |>\n",
+    "  tq_performance(Ra = Ra, Rb = NULL, performance_fun = table.AnnualizedReturns)"
+   ],
+   "id": "abb58371-d8b5-430a-a4ff-bcadebbebb4a"
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/html"
+   },
+   "source": [
+    "<!-- Put the values in the markdown tables, mention concepts of qualitative analysis -->"
+   ],
+   "id": "0a5a368e-2a90-4df7-b283-896be96ff31d"
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### **I. Graham Number Calculation**\n",
     "\n",
     "The Graham Number estimates a stock’s intrinsic value using earnings per share (EPS) and book value per share (BVPS):  \n",
@@ -90,7 +253,7 @@
     "\n",
     "Clorox’s fundamentals reflect a company in recovery, balancing strong brand equity and dividend reliability with significant debt and valuation risks. While operational improvements (e.g., margin expansion, ERP transition) are promising, the stock’s premium pricing and leverage warrant caution. Investors should monitor debt reduction and margin sustainability in 2025 ."
    ],
-   "id": "19d80e6b-882e-4123-bd4e-6ee15e2b1afc"
+   "id": "75ebf82c-a3ee-445a-85af-6f9af0bf5b6e"
   }
  ],
  "nbformat": 4,
