--- a/_output/notebooks/fundamentals.qmd
+++ b/_output/notebooks/fundamentals.qmd
@@ -11,6 +11,75 @@ EV = Mcap + Debt
 
 ---
 
+::: {.callout-important}
+In this section we will take a look at quantitative fundamental analysis tools provided by the "tidyquant" R language package [@danchoTidyquantTidyQuantitative2025] and use them to get key financial ratios of fundamental analysis for the Clorox company. This section is based on the following wonderful tutorial: @PerformanceAnalysisTidyquant
+:::
+
+First let's retrieve 5-year period returns from the prices adjusted for stock splits, both for Clorox and S&P500 as the baseline. Next, we combine both datasets (Clorox and S&P500 returns) using "left-join" on the "date" field. Using this dataset, we can retrieve all kind of fundamental metrics, such as **Alpha** (0.0008), **Beta** (0.414).
+
+```{r} 
+#| label: tbl-planet-measures
+#| tbl-cap: Astronomical object
+
+library(tidyverse)
+library(tidyquant)
+
+Ra <- "CLX" |>
+    tq_get(get  = "stock.prices",
+           from = "2020-01-01",
+           to   = "2025-02-01") |>
+    group_by(symbol) |>
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly", 
+                 col_rename = "Ra")
+
+
+Rb <- "^GSPC" |>
+    tq_get(get  = "stock.prices",
+           from = "2020-01-01",
+           to   = "2025-02-01") |>
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly", 
+                 col_rename = "Rb")
+
+RaRb <- left_join(Ra, Rb, by = c("date" = "date"))
+
+
+RaRb_capm <- RaRb %>%
+    tq_performance(Ra = Ra, 
+                   Rb = Rb, 
+                   performance_fun = table.CAPM)
+
+RaRb_capm %>% select(symbol, Alpha, Beta)
+```
+
+We can also get the **Annualized Sharpe Ratio and Returns**, **Types of Mean Return (Geometric, Arithmetic, etc.)**, **Kurtosis**, as well as **Maximum and Median Return** by following the similar steps (no need for the baseline this time).
+
+```{r} 
+library(tidyverse)
+library(tidyquant)
+
+Ra <- "CLX" |>
+    tq_get(get  = "stock.prices",
+           from = "2020-01-01",
+           to   = "2025-02-01") |>
+    group_by(symbol) |>
+    tq_transmute(select     = adjusted, 
+                 mutate_fun = periodReturn, 
+                 period     = "monthly", 
+                 col_rename = "Ra")
+
+Ra |>
+  tq_performance(Ra = Ra, Rb = NULL, performance_fun = table.AnnualizedReturns)
+
+Ra |>
+  tq_performance(Ra = Ra, Rb = NULL, performance_fun = table.Stats)
+```
+
+<!-- Put the values in the markdown tables, mention concepts of qualitative analysis -->
+
 #### **I. Graham Number Calculation**  
 The Graham Number estimates a stock’s intrinsic value using earnings per share (EPS) and book value per share (BVPS):  
 **Formula**:  
