--- a/_output/notebooks/fundamentals.embed.ipynb
+++ b/_output/notebooks/fundamentals.embed.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#"
    ],
-   "id": "5072d779-d1a3-4e36-acae-a5e7a5e553b1"
+   "id": "3db44560-cf5b-4471-a609-f0ebffd8e3a1"
   },
   {
    "cell_type": "raw",
@@ -25,7 +25,7 @@
     "EV = Mcap + Debt\n",
     "-->"
    ],
-   "id": "10ce3738-2cb9-441e-b85f-6c05e11c2506"
+   "id": "f02e04e6-2daa-468c-80ed-dc734478de1a"
   },
   {
    "cell_type": "markdown",
@@ -39,7 +39,7 @@
     "\n",
     "First let’s retrieve 5-year period returns from the prices adjusted for stock splits, both for Clorox and S&P500 as the baseline. Next, we combine both datasets (Clorox and S&P500 returns) using “left-join” on the “date” field. Using this dataset, we can retrieve all kind of fundamental metrics, such as **Alpha** (0.0008), **Beta** (0.414)."
    ],
-   "id": "2257c857-d583-4151-8577-6032c14aae53"
+   "id": "bc2b5223-06b2-4955-a421-22e0a88b8eac"
   },
   {
    "cell_type": "code",
@@ -107,9 +107,10 @@
     }
    ],
    "source": [
-    "library(tidyverse)\n"
+    "#| echo: true\n",
+    "library(tidyverse)"
    ],
-   "id": "5d114499-bc32-4b86-83e9-267ca3446e52"
+   "id": "06d596de-7ff3-408f-a041-e6a3d5b3c16c"
   },
   {
    "cell_type": "markdown",
@@ -117,7 +118,7 @@
    "source": [
     "We can also get the **Annualized Sharpe Ratio and Returns**, **Types of Mean Return (Geometric, Arithmetic, etc.)**, **Kurtosis**, as well as **Maximum and Median Return** by following the similar steps (no need for the baseline this time)."
    ],
-   "id": "315e396d-80f2-46b4-b1e8-80cb754e7aa5"
+   "id": "4f5bfb75-4daa-4448-b218-dff4cb3298ad"
   },
   {
    "cell_type": "code",
@@ -151,6 +152,7 @@
     }
    ],
    "source": [
+    "#| echo: true\n",
     "library(tidyverse)\n",
     "library(tidyquant)\n",
     "\n",
@@ -166,9 +168,9 @@
     "\n",
     "Ra |>\n",
     "  tq_performance(Ra = Ra, Rb = NULL, performance_fun = table.AnnualizedReturns) |>\n",
-    "  print()\n"
+    "  print()"
    ],
-   "id": "0e52282b-4bfd-4c88-b991-a4c75b9c42fd"
+   "id": "19139c73-9725-4e7a-8fee-12f9a5a68edc"
   },
   {
    "cell_type": "markdown",
@@ -178,7 +180,7 @@
     "\n",
     "We can use the “tidyquant” R language package to perform fundamental analysis of the company and obtain all of the key financial ratios for such analysis. The analysis shows a company in recovery with strong fundamentals."
    ],
-   "id": "568a6fe9-60ee-451d-a333-8d2f3526a43b"
+   "id": "522225b4-fbda-4c89-83d8-d3c757e1c424"
   }
  ],
  "nbformat": 4,
