--- a/notebooks/fundamentals.qmd
+++ b/notebooks/fundamentals.qmd
@@ -13,7 +13,7 @@ EV = Mcap + Debt
 In this section we will take a look at quantitative fundamental analysis tools provided by the "tidyquant" R language package [@danchoTidyquantTidyQuantitative2025] and use them to get key financial ratios of fundamental analysis for the Clorox company. This section is based on the following wonderful tutorial: @PerformanceAnalysisTidyquant
 :::
 
-#### **Basic Fundamental Analysis of the Clorox Company**
+### **Basic Fundamental Analysis of the Clorox Company**
 
 First let's retrieve 5-year period returns from the prices adjusted for stock splits, both for Clorox and S&P500 as the baseline. Next, we combine both datasets (Clorox and S&P500 returns) using "left-join" on the "date" field. Using this dataset, we can retrieve all kind of fundamental metrics, such as **Alpha** (0.0008), **Beta** (0.414).
 
@@ -51,8 +51,6 @@ RaRb_capm <- RaRb %>%
                    performance_fun = table.CAPM)
 
 RaRb_capm %>% select(symbol, Alpha, Beta) |> print()
-
-
 ```
 
 We can also get the **Annualized Sharpe Ratio and Returns**, **Types of Mean Return (Geometric, Arithmetic, etc.)**, **Kurtosis**, as well as **Maximum and Median Return** by following the similar steps (no need for the baseline this time).
@@ -81,5 +79,5 @@ Ra |>
   print()
 ```
 
-#### **Conclusion**  
+### **Conclusion**  
 We can use the "tidyquant" R language package to perform fundamental analysis of the company and obtain all of the key financial ratios for such analysis. The analysis shows a company in recovery with strong fundamentals.
