Add a minor correction to the Sector section

--- a/_output/_tex/index.tex
+++ b/_output/_tex/index.tex
@@ -269,7 +269,7 @@ the tools of computational finance.
 \tableofcontents
 }
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colback=white, opacityback=0, coltitle=black, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-warning-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-warning-color}{\faExclamationTriangle}\hspace{0.5em}{On the simplified nature of analysis in this document.}, opacitybacktitle=0.6, bottomtitle=1mm, titlerule=0mm, breakable, rightrule=.15mm, toprule=.15mm, colframe=quarto-callout-warning-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-warning-color}{\faExclamationTriangle}\hspace{0.5em}{On the simplified nature of analysis in this document.}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-warning-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-warning-color-frame]
 
 Subject of financial analysis is very information-dense and to perform
 such an analysis (be it an analysis of industrial sectors, fundamental,
@@ -288,7 +288,7 @@ and Quarto scientific publishing system ({``Quarto''} 2025).
 
 \subsection{Sector Analysis}\label{sector-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colback=white, opacityback=0, coltitle=black, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, opacitybacktitle=0.6, bottomtitle=1mm, titlerule=0mm, breakable, rightrule=.15mm, toprule=.15mm, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
 
 In this section we analyze financial data on websites such as
 \url{https://finance.yahoo.com}, as well as using the
@@ -298,9 +298,9 @@ web and provide summaries. Some basic charting using R language ({``R:
 
 \end{tcolorbox}
 
-\subsubsection{Financial Analysis of the Clorox Company in the Consumer
-Defensive
-Sector}\label{financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector}
+\subsubsection{\texorpdfstring{\textbf{Financial Analysis of the Clorox
+Company in the Consumer Defensive
+Sector}}{Financial Analysis of the Clorox Company in the Consumer Defensive Sector}}\label{financial-analysis-of-the-clorox-company-in-the-consumer-defensive-sector}
 
 \paragraph{\texorpdfstring{\textbf{1. Sector
 Analysis}}{1. Sector Analysis}}\label{sector-analysis-1}
@@ -472,6 +472,10 @@ The following objects are masked from 'package:base':
 
 \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-1-1.pdf}}
 
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
+
 \subsubsection{\texorpdfstring{\textbf{Conclusion}}{Conclusion}}\label{conclusion}
 
 We can use web scraping, modern LLM chatbots and R language to perform
@@ -483,7 +487,7 @@ characterizes the sector itself.
 \subsection{Personality of the
 Company}\label{personality-of-the-company}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colback=white, opacityback=0, coltitle=black, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, opacitybacktitle=0.6, bottomtitle=1mm, titlerule=0mm, breakable, rightrule=.15mm, toprule=.15mm, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
 
 In this section we collect and cite a variety of publicly available
 sources to perform an analysis of the company personality. We use use
@@ -668,7 +672,7 @@ branding, good leadership and consistent performance.
 
 \subsection{Fundamental Analysis}\label{fundamental-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colback=white, opacityback=0, coltitle=black, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, opacitybacktitle=0.6, bottomtitle=1mm, titlerule=0mm, breakable, rightrule=.15mm, toprule=.15mm, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
 
 In this section we will take a look at quantitative fundamental analysis
 tools provided by the ``tidyquant'' R language package (Dancho and
@@ -764,6 +768,10 @@ Registered S3 method overwritten by 'robustbase':
 1 CLX    0.0008 0.414
 \end{verbatim}
 
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
+
 We can also get the \textbf{Annualized Sharpe Ratio and Returns},
 \textbf{Types of Mean Return (Geometric, Arithmetic, etc.)},
 \textbf{Kurtosis}, as well as \textbf{Maximum and Median Return} by
@@ -817,6 +825,10 @@ following the similar steps (no need for the baseline this time).
 #   Stdev <dbl>, `UCLMean(0.95)` <dbl>, Variance <dbl>
 \end{verbatim}
 
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
+
 \subsubsection{\texorpdfstring{\textbf{Conclusion}}{Conclusion}}\label{conclusion-2}
 
 We can use the ``tidyquant'' R language package to perform fundamental
@@ -826,7 +838,7 @@ fundamentals.
 
 \subsection{Technical Analysis}\label{technical-analysis}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colback=white, opacityback=0, coltitle=black, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, opacitybacktitle=0.6, bottomtitle=1mm, titlerule=0mm, breakable, rightrule=.15mm, toprule=.15mm, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
 
 Technical analysis in this section follows the wonderful tutorial
 provided here: ({``Financial Modeling with {R}''} 2025)
@@ -856,6 +868,10 @@ We'll start with providing a simple plot of stock price movement.
 
 \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-4-1.pdf}}
 
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
+
 To identify basic trend in this movement, we then chart the
 \textbf{Simple Moving Average}.
 
@@ -876,6 +892,10 @@ To identify basic trend in this movement, we then chart the
 \end{Shaded}
 
 \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-5-1.pdf}}
+
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
 
 By playing with the ``n'' value - the average of the last n-day stock
 prices - we produced a line that closely resembles the price line. Since
@@ -926,6 +946,10 @@ i Did you forget to specify a `group` aesthetic or to convert a numerical
 \end{verbatim}
 
 \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-6-1.pdf}}
+
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
 
 And finally let's look at such charts for major competitors to get the
 feel of the market.
@@ -996,6 +1020,10 @@ i Did you forget to specify a `group` aesthetic or to convert a numerical
 
 \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-7-1.pdf}}
 
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
+
 As we can see, the volatility of the stock prices shouldn't be that
 great in the near future. Since technical analysis is best-suited for
 short-term trading, near future is all we can advise or client on based
@@ -1010,7 +1038,7 @@ The analysis predicts stable performance in the short term.
 \subsection{Company Performance
 2019-2024}\label{company-performance-2019-2024}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colback=white, opacityback=0, coltitle=black, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, opacitybacktitle=0.6, bottomtitle=1mm, titlerule=0mm, breakable, rightrule=.15mm, toprule=.15mm, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
 
 In this section we provide some historic data and rudimentary analysis
 of the company during the 2019-2024 period.
@@ -1053,6 +1081,10 @@ the time period you are interested in, and get it same as always.
 \end{Shaded}
 
 \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-8-1.pdf}}
+
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
 
 Fundamental analysis based on revenue data for the last five-year period
 can be found in the ``Fundamental Analysis'' section.
@@ -1137,7 +1169,7 @@ performance during the last five-year period.
 
 \subsection{Forecasting}\label{forecasting}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colback=white, opacityback=0, coltitle=black, arc=.35mm, leftrule=.75mm, bottomrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, opacitybacktitle=0.6, bottomtitle=1mm, titlerule=0mm, breakable, rightrule=.15mm, toprule=.15mm, colframe=quarto-callout-note-color-frame]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, left=2mm, toptitle=1mm, arc=.35mm, opacityback=0, rightrule=.15mm, colbacktitle=quarto-callout-note-color!10!white, toprule=.15mm, bottomtitle=1mm, colback=white, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, breakable, opacitybacktitle=0.6, coltitle=black, colframe=quarto-callout-note-color-frame]
 
 In this section we use ARIMA model to provide a long-term forecast of
 the company stock price.
@@ -1238,6 +1270,10 @@ Warning: Non-numeric columns being dropped: date
 
 \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-9-2.pdf}}
 
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/index.qmd.html}{Article
+Notebook}}
+
 We can see the band for the future time periods representing possible
 price ranges and 2 confidence levels.
 
@@ -1275,6 +1311,10 @@ and Bradshaw (2022){]}, {[}\emph{Forecasting: {Principles} and
 {Practice} (2nd Ed)} (2025){]}, {[}{``R for {Data Science} (2e)''}
 (2025){]}, {[}{``Tidy {Quantitative Financial Analysis}''} (2025){]},
 {[}{``Investopedia''} (2025){]}.
+
+\textsubscript{Source:
+\href{https://ds-an.github.io/computational-finance-project/documents/summary-preview.html\#f4e056d6-fa5d-4eb2-93af-a70330a65e0d}{**Analysis
+Summary and Letter Grade**}}
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
